# CosmicVoyage

./: .coderabbit.yml  .env  .env.deployment  .env.local  .gitignore  .replit  Agent  BLOCKCHAIN_DEPLOYMENT_GUIDE.md  BLOCKCHAIN_INTEGRATION_SUMMARY.md  BUG_FIX_INSTANT_REWARDS.md  CNAME  COMPLETE_USER_ANALYTICS_DATABASE_INTEGRATION.md  CosmicVoyage.md  EXPANDED_GAME_SUMMARY.md  GAME_MECHANICS_DETAILED_REVIEW.md  GENESIS_FAUCET_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LICENSE  ON_CHAIN_DEPLOYMENT_CHECKLIST.md  PHASE_II_TECHNICAL_SPECIFICATIONS.md  README.md  REFERRAL_SYSTEM_COMPLETE.md  REFERRAL_SYSTEM_SPEC.md  REVIEW_AND_ACTION_ITEMS.md  SMART_CONTRACT_DEPLOYMENT.md  STAR_TOKEN_DEPLOYMENT_GUIDE.md  TOKENOMICS.md  TOKENOMICS_IMPLEMENTATION_REVIEW.md  TOKENOMICS_REDESIGN.md  TOKEN_CONFIG.md  TONCONNECT_INTEGRATION_REVIEW.md  USER_TRACKING_ANALYTICS_SYSTEM.md  WHITEPAPER.md  apiGUIDE.md  build.sh  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  replit.md  (+4 more)
.deployments/: deployment_mainnet_2025-11-23.json  deployment_testnet_2025-11-23.json  deployment_testnet_2025-11-25.json
archive/: PHASE_II_IMPLEMENTATION_COMPLETE.md
attached_assets/: Pasted--1-Distribution-Reserves-Restructuring-the-1B-STAR-supply-to-reduce-centralization-and-add-adapt-1764095796804_1764095796807.txt  (+24 more)
client/: .env.local  index.html
contracts-blueprint/: .env.local  (+15 more)
spaceAI/: pyproject.toml  replit.md  spaceAI.md
spaceAI/data/: celestial_objects.csv
spaceAI/notebooks/: train_celestial_classifier.ipynb
spaceAI/src/: predict.py  setup_and_train.py  train_model.py
(+168 files in other folders)
