[project]
name = "spaceAI"
version = "0.1.0"
description = "Educational AI system for celestial classification and orbital prediction"
authors = [
    { name="JNx", email="jnalair28@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
scikit-learn = "^1.2.2"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"