
[tool.poetry]
name = "spaceai"
version = "0.1.0"
description = "Educational AI system for celestial classification and orbital prediction"
authors = ["JNx <jnalair28@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
